--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^1.3.2",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
