--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,13 @@
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
+    "esbuild": "^0.25.0",
     "express": "^4.21.2",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.475.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.29.0",
     "react-slick": "^0.30.3",
@@ -29,17 +31,22 @@
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react-swc": "^3.7.2",
+    "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.2",
     "prettier": "^3.5.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.4",
-    "vite": "^6.0.5"
-  }
+    "tailwindcss": "^4.0.6",
+    "vite": "^6.1.0"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
